#08 E2E Test (End to End)

--- a/.prettierrc
+++ b/.prettierrc
@@ -2,5 +2,7 @@
   "singleQuote": true,
   "trailingComma": "all",
   "endOfLine": "lf",
-  "embeddedLanguageFormatting": "auto"
+  "embeddedLanguageFormatting": "auto",
+  "semi": true,
+  "printWidth": 80
 }
